--- a/package.json
+++ b/package.json
@@ -1,16 +1,3 @@
 {
-  "author": "Jane Doe",
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "express": "4.17.1"
-  }
+  "author": "Jane Doe"
 }
