--- a/package.json
+++ b/package.json
@@ -1,3 +1,16 @@
 {
-  "author": "Jane Doe"
+  "author": "Jane Doe",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "A project that does something awesome",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "express": "4.17.1"
+  }
 }
