--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon index.js"
   },
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.17.1"
   }
 }
